--- a/index.html
+++ b/index.html
@@ -1,44 +1,142 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Project 3 – Modular JavaScript</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      background: linear-gradient(90deg, rgba(42,155,132,1) 0%, rgba(87,108,199,1) 51%, rgba(83,237,206,1) 100%);
-      color: #fff;
-    }
-    h1 { color: #ffe066; }
-    ul { line-height: 1.8; }
-    .button {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background-color: #007acc;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 6px;
-    }
-    .button:hover {
-      background-color: #005f99;
-    }
-  </style>
-</head>
-<body>
-  <h1>📦 CIT 281 – Project 3</h1>
-  <p>In this project, I learned how to modularize JavaScript files using CommonJS and explored separating logic into reusable components. The project focused on string manipulation, logic structures, and creating clean, organized output through module exports.</p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Coin Calculator</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 30px;
+        background-color: #f4f4f4;
+      }
+      h1,
+      h2 {
+        color: #0077cc;
+      }
+      .section {
+        margin-bottom: 40px;
+      }
+      label {
+        display: inline-block;
+        width: 150px;
+        margin-bottom: 5px;
+      }
+      input[type="number"] {
+        width: 80px;
+        padding: 5px;
+      }
+      button {
+        margin-top: 10px;
+        padding: 6px 12px;
+        font-size: 1rem;
+        cursor: pointer;
+      }
+      .result {
+        margin-top: 15px;
+        padding: 10px;
+        background: #fff;
+        border: 1px solid #ccc;
+        white-space: pre-wrap;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Coin Calculator Interface</h1>
 
-  <h2>Highlights</h2>
-  <ul>
-    <li>Created reusable JavaScript functions using `module.exports`</li>
-    <li>Used logic to process and transform string input</li>
-    <li>Tested modules individually and as a group</li>
-  </ul>
+    <!-- Coin Combo Explorer -->
+    <div class="section">
+      <h2>Coin Combo Explorer</h2>
+      <label for="comboAmount">Amount in cents:</label>
+      <input type="number" id="comboAmount" min="0" />
+      <button onclick="fetchCombo()">Get Combinations</button>
+      <div class="result" id="comboResult"></div>
+    </div>
 
-  <a href="screenshots.html" class="button">📸 View Screenshots</a>
-  <br><br>
-  <a href="https://github.com/Escxped/cit281-p3" class="button" target="_blank">🔗 View Code on GitHub</a>
-</body>
+    <!-- Coin Value Calculator -->
+    <div class="section">
+      <h2>Coin Value Calculator</h2>
+      <div>
+        <label>Pennies (1&cent;):</label
+        ><input type="number" id="pennies" value="0" />
+      </div>
+      <div>
+        <label>Nickels (5&cent;):</label
+        ><input type="number" id="nickels" value="0" />
+      </div>
+      <div>
+        <label>Dimes (10&cent;):</label
+        ><input type="number" id="dimes" value="0" />
+      </div>
+      <div>
+        <label>Quarters (25&cent;):</label
+        ><input type="number" id="quarters" value="0" />
+      </div>
+      <div>
+        <label>Half Dollars (50&cent;):</label
+        ><input type="number" id="halves" value="0" />
+      </div>
+      <div>
+        <label>Dollar Coins (100&cent;):</label
+        ><input type="number" id="dollars" value="0" />
+      </div>
+      <button onclick="fetchValue()">Calculate Value</button>
+      <div class="result" id="valueResult"></div>
+    </div>
+
+    <script>
+      async function fetchCombo() {
+        const amount = document.getElementById("comboAmount").value;
+        const resultBox = document.getElementById("comboResult");
+        resultBox.innerHTML = "Loading...";
+
+        try {
+          const res = await fetch(`/coincombo?amount=${amount}`);
+          const data = await res.json();
+
+          if (data.totalCombinations === 0) {
+            resultBox.innerHTML = "No combinations found.";
+          } else {
+            resultBox.innerHTML =
+              `Found ${data.totalCombinations} combinations:\n` +
+              data.combinations
+                .slice(0, 20)
+                .map(
+                  (combo, i) =>
+                    `${i + 1}. ${combo.quarters}q, ${combo.dimes}d, ${
+                      combo.nickels
+                    }n, ${combo.pennies}p`
+                )
+                .join("\n") +
+              (data.totalCombinations > 20 ? "\n...more not shown." : "");
+          }
+        } catch (err) {
+          resultBox.innerHTML = "Error retrieving combinations.";
+        }
+      }
+
+      async function fetchValue() {
+        const getVal = (id) => document.getElementById(id).value || 0;
+
+        const params = new URLSearchParams({
+          pennies: getVal("pennies"),
+          nickels: getVal("nickels"),
+          dimes: getVal("dimes"),
+          quarters: getVal("quarters"),
+          halves: getVal("halves"),
+          dollars: getVal("dollars"),
+        });
+
+        const resultBox = document.getElementById("valueResult");
+        resultBox.innerHTML = "Calculating...";
+
+        try {
+          const res = await fetch(`/coinvalue?${params.toString()}`);
+          const data = await res.json();
+          resultBox.innerHTML = `Total Value: $${data.totalDollars} (${data.totalCents}&cent;)`;
+        } catch (err) {
+          resultBox.innerHTML = "Error calculating value.";
+        }
+      }
+    </script>
+  </body>
 </html>
