--- a/project-info.html
+++ b/project-info.html
@@ -75,6 +75,7 @@
   <a href="index.html" class="button">🧪 Try the Coin App</a>
   <br>
   <a href="https://github.com/Escxped/cit281-p3" class="button" target="_blank">📂 View Code on GitHub</a>
+  <a href="https://escxped.github.io/" class="button">⬅ Back to Main Portfolio</a>
 
 </body>
 </html>
